VERIFIED FIXED25900
[Gtk] ROLE_ROW_HEADER should not be used for list item bullets/numbers
https://bugs.webkit.org/show_bug.cgi?id=25900
Summary [Gtk] ROLE_ROW_HEADER should not be used for list item bullets/numbers
Joanmarie Diggs
Reported 2009-05-20 16:42:04 PDT
Steps to reproduce: 1. Open the (to be) attached test case. 2. Use Accerciser to explore the accessible hierarchy for list items. Preferred results: The text for the list item bullet/number would be combined with the text of the item itself (i.e. in one object rather than two). Expected results: Assuming it is necessary to maintain separate accessible objects for the item's bullet/number and the item's text, the bullet/number would be of ROLE_TEXT. Actual results: The item's bullet/number is of ROLE_ROW_HEADER (a role associated and expected in tables; not list items).
Attachments
aforementioned test case (207 bytes, text/html)
2009-05-20 16:42 PDT, Joanmarie Diggs
no flags
use ROLE_TEXT for ListMarkerRole (1.16 KB, patch)
2009-05-21 06:30 PDT, Jan Alonzo
xan.lopez: review+
Joanmarie Diggs
Comment 1 2009-05-20 16:42:44 PDT
Created attachment 30515 [details] aforementioned test case
Jan Alonzo
Comment 2 2009-05-21 06:30:59 PDT
Created attachment 30541 [details] use ROLE_TEXT for ListMarkerRole
Xan Lopez
Comment 3 2009-05-21 13:20:55 PDT
Have you tried to figure out how to do the 'preferred result'? :)
Xan Lopez
Comment 4 2009-05-23 06:29:48 PDT
Joannie, would it be useful to you if we commit this while we figure out if we can get the preferred solution?
Joanmarie Diggs
Comment 5 2009-05-23 11:50:55 PDT
(In reply to comment #4) > Joannie, would it be useful to you if we commit this while we figure out if we > can get the preferred solution? > I could go either way. That said, the preferred solution could be looked at as another bug, one related to (if not the same as) bug 25675. In both cases, multiple accessibles are present when only one (IMHO) should be. Jan fixed the most important issue reported here, namely the role. Thanks!
Xan Lopez
Comment 6 2009-05-23 12:11:41 PDT
Comment on attachment 30541 [details] use ROLE_TEXT for ListMarkerRole OK! Then let's commit this and let's try to fix the bigger issue in other bug. FWIW, I need to fix something similar to finish my get_text_at_offset patch, WebKit splits text separated by <br> in different elements, which makes testing the feature pretty complicated.
Jan Alonzo
Comment 7 2009-05-23 15:23:51 PDT
Patch landed in r44104.
Joanmarie Diggs
Comment 8 2009-07-27 17:56:37 PDT
Verifying. Thanks!
Note You need to log in before you can comment on or make changes to this bug.