2009-05-23  Jan Michael Alonzo  <jmalonzo@webkit.org>

Reviewed by Xan Lopez.

        [Gtk] ROLE_ROW_HEADER should not be used for list item bullets/numbers
        https://bugs.webkit.org/show_bug.cgi?id=25900

        Use ATK_ROLE_TEXT for ListMarkerRole.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (atkRole):

Canonical link: https://commits.webkit.org/35974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44104 268f45cc-cd09-0410-ab3c-d52691b4dbfc